--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OlhPrUDKnVp0/CNvk7EHnLmnk5ElOz1vrfHhxUMjTjgUMi6+kTDbMZ/64zW6RNmJKexdqUsCZGlKNXWGuL9fVDp06q63gWyuIRBTMIsBXDWoteasXs9LDLAjQGT+CHf0">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pV2Lc/l2lgw+PmF1Ohn8Zk4tP1FrZpBK7NLPq9A3OuaPLW8F9mJ6iIkY2JNeJ66Oc22iHynwqr46ylwcOuJ421Ge/uCWo3SY3YYddSPEdvv/N2TEHxrUKmSPG1Wbj01+">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -175,7 +175,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-5"><strong>Click on a photo below to send an email!</strong></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><strong>Need to contact someone specific? Click on a photo below to send an email!</strong></div>
         </div>
     </div>
 </section>
