--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pDH20mzRRu2xyh6tW8XkX1S3BsZaZu6xNAllhoPnmOpe1qn9PQKW1umeCDG4lYrGrRUfCw/HzFqwO6yFXPGpnbHvI2lwB2qzV6J5XAHUXj20OxqwyL1IGYxEv1d2puEs">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2fANBwOym5V62iAwoOSoDphXsmXOe/pSFPKiG/DNtDwPyXteR7c2KbcKjqAQtQNXsoB4QstAat+bjSBEIyLiJLbPwDcokM+fzpd5wvVHWkU5JNuUUsoXnOpxcL0NNCKo">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
