--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4Tz2MBx/drhJE2TotiQjGSJmtlmRt99/9LiqC2tQwHIqT+HPYfC7Hcm878GNsMDF/uBrZSmUL4yW0vfgYS7H2vZDTllVY+BG+Sh+qINbp4O6fnLfCm2L6FuxzaK9iv4+">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PtAV/4jpg0lKPHA6fMEnvOnflL3qodH9gCvnib6CUTs3pasrulfaoA1Bo1RPDe/XOY4LEiHQIv81NmcdzpZdBDNNttJiDMeP0nYusPlUkJX6PqS8KJAtwCLyBnf+7Pz7">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
