--- a/page2.html
+++ b/page2.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -66,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +129,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xlAnurY97prvQpbj5CicdQyHENgJArs3hpvak/NMWM29ejpuy4n8ryKoxM2UEwGQA4kRyjdNrL7qFBb/fCBtFnNUdOI8oNEj7+JncNmPu4sHM/hYJJjHWA+op2NrHBEc">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="n113o/AjS+HvnFnrf8xskCU0Ts5aRSWYqLetx9tvmIsgGGYLlhqvPIifpyMWswr3sRVyRn48jh3Y5hsBf0B+9CHjU6e05Z8+4/KdsbcROFuH681lRNIFcflBFMlNnjzZ">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -343,9 +344,12 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-</body>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
+    <input name="animation" type="hidden">
+  </body>
 </html>
