--- a/page6.html
+++ b/page6.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -66,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
 
     
 
@@ -116,11 +117,11 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_107" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_80" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-7">Primary Care Associates of Jonesville, Pllc.</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_107" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_80" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">“After hours on a Friday, a part of the faucet popped off. Water sprayed at the ceiling until we came in the next morning. It was horrific. They [Barrett Insurance] were the first ones we called. We had no worries about the financial end of it. We had no worries about what they were going to take care of. They were wonderful." </p>
                                     </div>
@@ -128,12 +129,12 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_107" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_80" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-7">Greg and Trudy Morrison,
  T S Transit LLC</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_107" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_80" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            “I am writing to let you know how great of a job Joe Ruden did for my company. Joe found us Workers' Compensation insurance at a tremendous savings. There were multiple agents from Michigan and Indiana working on this. No one except Joe could find or do anything for us. I am so thankful for the savings. It probably saved our family business from closing. Joe is a very professional and wonderful agent to work with. Anytime we have a question or concern Joe is there with the answers we are looking for. We feel so thankful to have him as our agent. Thanks again and we are looking forward to working with Barrett Insurance for all of our future insurance needs. Thanks you so much.” </p>
@@ -142,11 +143,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_107" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_80" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-7">Robert and Elaine Brichhta</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_107" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_80" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">“As Medicare enrollment approached, we were overwhelmed with information from many insurance companies about Medicare supplements. We turned to Clint Barrett to sort thru all this information. Clint helped us find the plan that was right for us. He took his time and met with us after business hours with our busy schedules in mind. But he did not stop there. He took a personal interest in our future. Since we owned a business, he consulted with us about an exit strategy. He gave us some excellent suggestions regarding the sale of our practice. For this we can never thank him enough. Clint took care of our immediate needs and helped us move into the future. We could tell he really cares about people and helping choose the plans best suited to their personal needs. We are very pleased with all that he did for us.”&nbsp;</p>
                                     </div>
@@ -154,11 +155,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title  text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse4_107" aria-expanded="false" aria-controls="collapse4">
+                                    <a role="button" class="collapsed panel-title  text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse4_80" aria-expanded="false" aria-controls="collapse4">
                                         <h4 class="mbr-fonts-style display-7">Jay Wing</h4>
                                     </a>
                                 </div>
-                                <div id="collapse4_107" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse4_80" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            “Thank you Tracey and the rest of Barrett Insurance on my recent motorcycle claim. You guys are always quick and helpful on settling any claims. I am looking forward to many more years of excellent service. Again thank you for taking the headaches out of insurance claims.” </p>
@@ -198,12 +199,15 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
+    <input name="animation" type="hidden">
+  </body>
 </html>
