create github pages

--- a/page10.html
+++ b/page10.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -143,7 +143,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YTcUwETeSMD4qHf6m1XLkCfMbqKpgmK4ZKSK+LdkOERjpPgoLCWL827kC9owqe7Hv5adplwBEu9pKR1TbaO8y2yMeeqtYt66Pn9nRmeyAhHXoaWnOeJ6XamKjc8aYWCQ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UUwllBFYcK8EqSZA8EWehOmISiv3ijKPFoeytXz5kq+EJy6TdwXpKWzEQnFQE6ehoQV/yzysDlfWq1Z13Cf40oQ3ahVTsie30T3Ok/D4nAcUfVDQdvHQ1q/UQIW04JS3">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
