--- a/page2.html
+++ b/page2.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -129,7 +129,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RDjBTQ4m4L/Yk7+Wh0SRV/RIiecYoHtk7MV0AKFBNQ1X6HDh/AVeWqJqEwrtJD8lRMxrggwGTRcLnBUwqRPG7gV8NFQXYu0lleEcKwzypTS68STeVrlqkaX0QdPrg0Vu">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OEQQ/V8Cjn+YifiZnr7goFsYPAQlpJRmPxX0Y34bCiUs2Xxw7r9lrbVnrbYykZSdVxiNb2Lk9nT06BR08vI6duPUD3A9dem8A0Bzz9OtfeBQ1RtbI1ieyi7J3oETYMEJ">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
