--- a/page2.html
+++ b/page2.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -129,7 +129,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OEQQ/V8Cjn+YifiZnr7goFsYPAQlpJRmPxX0Y34bCiUs2Xxw7r9lrbVnrbYykZSdVxiNb2Lk9nT06BR08vI6duPUD3A9dem8A0Bzz9OtfeBQ1RtbI1ieyi7J3oETYMEJ">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vQYhewGxKGtmYwWgjue7qylWK5qIABDcIvo1TklZww6TZJJX7shAXD8Q4VQUtovvgmr2EM/IfA2LxjVp12WqZtmo97CbJLh/0FTbDOC/4vbTehC3kpx63++Yv1wCS4m1">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
