--- a/page7.html
+++ b/page7.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
