--- a/page14.html
+++ b/page14.html
@@ -13,9 +13,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -66,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
 
     
 
@@ -143,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3ViT4tGvo6Nz2pdIz2FdnZj0WKFKCc4fTcH+BHFrY8qk0UfhhOoh5cRY8T1NE/0PNcTIfUVB7n+GBLtvYRmS6Q+tsuHGwf5NNKnT8H3tW0ggwK/KltSd6kDGH6+jKusf">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TGc0YWStDFaCBWDL6WJ5FYNgGQiABlPcYujY5+vD8CBPoEo+oEOBLX/+7AMQT1xx/EEFoe7plLw0k9sUicPGIOVdBlEV5PbC8mi53vefZF+7IsOuU53RbvW7jK9QxEaR">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -201,12 +200,10 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
-    <input name="animation" type="hidden">
   </body>
 </html>
