--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -67,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -437,7 +436,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FJZGyMlI1n4h2Dcopog6rbLcoG9k6BFTGuMmF1tQADIAFUfPrPGAamwhFd43DhViweY/t2x2c1Qkh7blfbweR9xEEoglKrH5l5GQSGTR4nw6KliY9eAQrGnST8ob0JbS">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mTGaGRfs2AIi0ogqD2re5O8SUAkwZvtHORCK+EG3Et+P46rSqkLzQeGWx/pFx8EdaYak4tUy8B68nOEo2dnIYjfl3bTahpIRbdn1A2frH0wk3VG1Qk+4cHNl4NLAiDXJ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -495,7 +494,6 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
@@ -508,6 +506,5 @@
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
-    <input name="animation" type="hidden">
   </body>
 </html>
