--- a/page12.html
+++ b/page12.html
@@ -13,9 +13,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -66,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -143,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="P4KkTaeQzOKScRIX3ymAfafuTiJJqy3Dnr1/RvRylY5Cq3CPSOOZSbRob+plYH0Goxhs9T8m9oW2G2c0m27VcTb0zY5uu6SuN3QagOCHLo4uzWwvdhRAUwoa2OUu87Q5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5/VXbcOSTfqKkN1/kAL9xjOHBMpCcilNuptM4ZF+aP+uMajp0hpXnSiybRAXorSBhrIJnsUe0JzY4u5Z3FmdCt1A6kKFqXmDnFjjAQRlntLJcXTUeg6GHRSD0tgMrBDA">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -201,12 +200,10 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
-    <input name="animation" type="hidden">
   </body>
 </html>
